# flow-forge-ai

./: .coverage  .gitignore  .pylintdict  .pylintrc  404.html  CHANGELOG.md  LICENSE  README.md  codecov.yml  config.example.toml  index.html  mypy.ini  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
core/: README.md  pyproject.toml
core/examples/01_openai_context_manager/: config.toml
core/examples/03_httpx_context_manager/: config.toml  example.py
core/examples/04_requests_workflow_decorator/: example.py
core/examples/05_langchain_runnable_pipeline/: config.toml  example.py
core/src/flow_forge_ai/: context.py  replay.py  runtime.py
core/src/flow_forge_ai/config/: config_handler.py  models.py
core/src/flow_forge_ai/instrumentation/: httpx_instr.py  langchain_instr.py  logging_instr.py  ollama_instr.py  openai_instr.py  requests_instr.py  trace_tool.py  utils.py  workflow.py
core/src/flow_forge_ai/instrumentation/models/: tool_payloads.py
core/src/flow_forge_ai/internal_logging/: logging_handler.py
core/src/flow_forge_ai/sinks/: __init__.py  base.py  console_sink.py  database_sink.py  file_sink.py  memory_sink.py  sink_router.py
core/src/flow_forge_ai/sinks/handlers/: __init__.py  jsonl_handler.py  mongodb_handler.py  mysql_handler.py  postgres_handler.py  resource_handler.py  sqlite_handler.py
core/src/flow_forge_ai/sinks/models/: event.py  step.py
core/tests/: conftest.py  test_config.py  test_database_handler_units.py  test_database_sink.py  test_httpx_instr.py  test_instrumentation_init.py  test_jsonl_handler.py  test_langchain_instr.py  test_logging.py  test_logging_instr.py  test_ollama_instr.py  test_openai_instr.py  test_openai_instr_.py  test_replay.py  test_requests_instr.py  test_runtime.py  test_sinks.py  test_sinks_init.py  test_tool_payloads.py  test_trace_tool.py  test_utils.py  test_workflow.py
core/tests/e2e/: test_inspect.py
core/tests/integration/: conftest.py  test_database_handlers.py  test_error_run.py  test_events.py  test_http_tracing.py  test_json_handler.py  test_span.py
docs/: mkdocs.yml
docs/docs/: examples.md  getting-started.md  index.md  sdk.md  ui.md
examples/: index.html
examples/01_openai_context_manager/: example.py
examples/02_ollama_workflow_decorator/: config.toml  example.py
examples/04_requests_workflow_decorator/: config.toml
getting-started/: index.html
sdk/: index.html
search/: search_index.json
src/flow_forge_ai/: emitter.py  runtime.py
src/flow_forge_ai/config/: config_handler.py
src/flow_forge_ai/instrumentation/: __init__.py  base.py  httpx_instr.py  ollama_instr.py  openai_instr.py  utils.py
src/flow_forge_ai/instrumentation/models/: llm_payloads.py
src/flow_forge_ai/internal_logging/: logger.py
src/flow_forge_ai/sinks/: composite_sink.py  log_sink.py
src/flow_forge_ai/sinks/handlers/: mongodb_handler.py  postgres_handler.py  sqlite_handler.py
src/flow_forge_ai/sinks/models/: event.py  run.py
src/flow_forge_ai/utils/: decorators.py  toml.py
src/flow_forge_ai_ui/: app.py  routes.py
tests/: conftest.py  test_config.py  test_context.py  test_database_sink.py  test_ollama_instrumentation.py  test_sinks.py
tests/integration/: test_database_handlers.py  test_http_tracing.py
ui/: README.md  index.html  pyproject.toml
ui/src/flow_forge_ai_ui/: routes.py
ui/src/flow_forge_ai_ui/templates/: index.html
ui/tests/: conftest.py  test_ui_app.py  test_ui_routes.py
