[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-forge-ai"
version = "0.1.0"
description = "Build, trace, inspect, and replay AI workflows with pluggable instrumentation and storage backends."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34.2",
    "tomli>=0.2.0",
]
license = "MIT"
keywords = [
    "ai",
    "llm",
    "agents",
    "observability",
    "instrumentation",
    "tracing",
    "workflow",
    "replay",
    "langchain",
    "openai"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

authors = [
    { name = "Alon Yampolski", email = "yampolski.a@gmail.com" }
]

maintainers = [
    { name = "Alon Yampolski", email = "yampolski.a@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/alonzo86/flow-forge-ai"
Documentation = "https://github.com/alonzo86/flow-forge-ai#readme"
Repository = "https://github.com/alonzo86/flow-forge-ai"
Issues = "https://github.com/alonzo86/flow-forge-ai/issues"

[project.optional-dependencies]
httpx-instr = [
    "httpx>=0.24.0",
]
openai-instr = [
    "openai>=1.0.0",
]
ollama-instr = [
    "ollama>=0.6.2",
]
langchain-instr = [
    "langchain>=1.3.9",
]
ui = [
    "httpx>=0.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20"
]

postgres-sink = [
    "psycopg2-binary>=2.9.0",
]
mongodb-sink = [
    "pymongo>=3.12.0",
]
mysql-sink = [
    "mysql-connector-python>=8.0.0",
]
sqlite-sink = [
    "pysqlite3>=0.6.0",
]

[project.scripts]
flow-forge-ai-ui = "flow_forge_ai_ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flow_forge_ai = ["py.typed"]
flow_forge_ai_ui = [
    "templates/**/*.html",
    "static/**/*",
]

[dependency-groups]
dev = [
    "respx>=0.23.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.21.0",
    "testcontainers>=4.14.2",
    "pylint[spelling]>=4.0.6",
    "pip-audit>=2.10.1",
    "bandit>=1.9.4",
    "build",
]

[tool.pylint]
ignore-patterns = ["test_.*", "examples"]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "broad-exception-caught",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "import-outside-toplevel"
]

[tool.pylint.format]
max-line-length = 180

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.pylint.spelling]
spelling-private-dict-file = ".pylintdict"
spelling-dict = "en_US"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# addopts = "-s"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
exclude = ["^tests/", "^examples/"]

[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
ignore_errors = true