[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "flow-forge-ai-ui"
version = "0.1.0"
description = "Debug UI for flow-forge-ai workflows."
readme = "README.md"
requires-python = ">=3.11"

license = "MIT"

authors = [
    { name = "Alon Yampolski", email = "yampolski.a@gmail.com" }
]


dependencies = [
    "flow-forge-ai>=0.1.0",
    "httpx>=0.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
]


[project.scripts]
flow-forge-ai-ui = "flow_forge_ai_ui.app:main"


[project.urls]
Homepage = "https://github.com/alonzo86/flow-forge-ai"
Repository = "https://github.com/alonzo86/flow-forge-ai"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
flow_forge_ai_ui = [
    "templates/**/*.html",
    "static/**/*",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
